--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "express": "^5.1.0",
-        "puppeteer": "^24.13.0"
+        "puppeteer": "^24.13.0",
+        "react-icons": "^5.5.0"
     }
 }
